objects/CSS_AccredUser__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to define lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSS_AccredUsers</relationshipLabel>
        <relationshipName>CSS_AccredUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Accreditation</label>
        <referenceTo>CSS_Accreditation__c</referenceTo>
        <relationshipLabel>CSS_AccredUsers</relationshipLabel>
        <relationshipName>CSS_AccredUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CERT_PERCENTAGE__c</fullName>
        <description>Certificate Percentage of Technician</description>
        <label>CERT_PERCENTAGE</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Used to Store first Name of the User</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetTechInfo_Concatenated_key__c</fullName>
        <formula>IF(  ISBLANK(RIGHT(Accreditation__r.Account__r.Location__c ,5)) &amp;&amp; ISBLANK(ServiceModelName__c) &amp;&amp;  ISBLANK(User_Login_ID__c), &apos;&apos;, RIGHT(Accreditation__r.Account__r.Location__c ,5)+ ServiceModelName__c + User_Login_ID__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GetTechInfo Concatenated key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Used to store Last Name from Siebel service for Qualified Technicians</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Accreditation__r.Account__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_Date_SBL__c</fullName>
        <description>This Field is used to store the Passed Date of Technician from Siebel Tech Info Web Service</description>
        <label>Passed Date SBL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Id__c</fullName>
        <description>This field is used to store the promotion ID from SBL</description>
        <label>Promotion Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qual_Prog_Id__c</fullName>
        <description>Field Used to Store Qual prog Id from WWSPS</description>
        <label>Qual Prog Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMN_ROW_ID__c</fullName>
        <description>Unique Identifier for SMN value</description>
        <externalId>true</externalId>
        <label>SMN_ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_ROW_ID__c</fullName>
        <label>SP_ROW_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceModelName__c</fullName>
        <label>ServiceModelName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <description>This field is NOT used and this field is replaced with ServiceModelName__c</description>
        <formula>Accreditation__r.Service_Model_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpCode__c</fullName>
        <label>SpCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ROW_ID__c</fullName>
        <description>Unique Identifier for technician record</description>
        <externalId>true</externalId>
        <label>TECH_ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Login_ID__c</fullName>
        <description>Used to Store the WWID</description>
        <label>User Login ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSS_AccredUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CSS_AccredUser</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>56270-56255</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS AccredUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_AccredUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>